--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -16,7 +16,7 @@
 @if (Model.SearchResult != null)
 {
     <div>
-        <h2>Positions</h2>
+        <h2>Number of time url appear on search results:</h2>
         @if (Model.SearchResult.Positions.Any())
         {
             <ul>
